--- a/docker/1.3.1/py3/Dockerfile.gpu
+++ b/docker/1.3.1/py3/Dockerfile.gpu
@@ -92,6 +92,7 @@ RUN ompi_info --parsable --all | grep mpi_built_with_cuda_support:value \
     "pyopenssl>=17.5.0" \
  && conda install -c dglteam -y dgl-cuda10.1==0.4.2 \
  && conda install -c conda-forge rdkit \
+ && conda install -c conda-forge mdtraj \
  && /opt/conda/bin/conda clean -ya
 
 RUN conda install -c pytorch magma-cuda101==2.5.1 \
