--- a/docker/1.3.1/py3/Dockerfile.gpu
+++ b/docker/1.3.1/py3/Dockerfile.gpu
@@ -129,7 +129,7 @@ RUN pip install \
  && pip uninstall -y torchvision \
  && pip install --no-cache-dir -U \
     https://torchvision-build.s3.amazonaws.com/1.3.1/gpu/torchvision-0.4.2-cp36-cp36m-linux_x86_64.whl \
- && pip install dgllife==0.1.2
+ && pip install --no-cache-dir -U dgllife==0.1.2
 
 # Install Horovod
 RUN ldconfig /usr/local/cuda-10.1/targets/x86_64-linux/lib/stubs \
